--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
-body {
-    background-color: rgb(247, 247, 247);
+* {
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+    font-weight: 700;
+}
+
+h2 {
+    font-weight: 400;
+}
+
+p {
+    font-weight: 400;
+    color: rgb(147, 147, 147)
 }
